# distr-hnsw

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md
crates/distr-hnsw/: Cargo.toml
crates/distr-hnsw/src/: agent.rs  crypto.rs  durability.rs  format.rs  lib.rs  main.rs  metadata.rs  object.rs  portal.rs
crates/distr-hnsw/tests/: commit_spine.rs  commit_spine_process.rs
docs/: m1-implementation-plan.md  m1-storage-contract.md  next-steps.md  phase-0-bakeoff-summary.json  phase-0-validation.md  roadmap.md
prototype/: Cargo.toml  README.md  queries.example.json
prototype/scripts/: assemble-mixed-corpus.sh  compare-eval-reports.py  run-bakeoff-anthonypc.sh  test_compare_eval_reports.py
prototype/src/: chunk.rs  config.rs  db.rs  embed.rs  eval.rs  extract.rs  main.rs  prepare.rs  report.rs  search.rs
prototype/testdata/: anthonypc-vault-queries.json
prototype/testdata/corpus/: architecture.md  invoice-4021.txt  meeting-notes.md  readme-project.html  tax-notes.md
